src/test/ui/suggestions/const-no-type.stderr
error: missing type for `const` item
  --> $DIR/const-no-type.rs:33:7
   |
LL | const C = 42;
   |       ^ help: provide a type for the item: `C: i32`

error: missing type for `static` item
  --> $DIR/const-no-type.rs:38:8
   |
LL | static S = Vec::<String>::new();
   |        ^ help: provide a type for the item: `S: std::vec::Vec<std::string::String>`

error: missing type for `static mut` item
  --> $DIR/const-no-type.rs:43:12
   |
LL | static mut SM = "abc";
   |            ^^ help: provide a type for the item: `SM: &'static str`

error: missing type for `const` item
  --> $DIR/const-no-type.rs:14:7
   |
LL | const C2 = 42;
   |       ^^ help: provide a type for the item: `C2: <type>`

error: missing type for `static` item
  --> $DIR/const-no-type.rs:20:8
   |
LL | static S2 = "abc";
   |        ^^ help: provide a type for the item: `S2: <type>`

error: missing type for `static mut` item
  --> $DIR/const-no-type.rs:26:12
   |
LL | static mut SM2 = "abc";
   |            ^^^ help: provide a type for the item: `SM2: <type>`

error: aborting due to 6 previous errors

